Bug 370651. Fire correct caret moved event for jumps to empty anchors. r=ginn.chen